Added some styling to the guest sign in and changed the function a little.

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -100,6 +100,11 @@ section{
     align-items: center;
 }
 
+.guest{
+    cursor: pointer;
+    margin-top: 10px;
+}
+
 .blog{
     padding: 24px;
     width: 35%;
